--- a/.github/workflows/artifact_create.yml
+++ b/.github/workflows/artifact_create.yml
@@ -12,5 +12,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
        name: my-artifact1
-       path: my_file.txt
+       path: file.txt
        retention-days: 5
